--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
+    "expo": "^37.0.12",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.16",
